# FuturNod_Researcher

./: .env.example  .env.sample  .gitignore  Dockerfile  README.md  create_project_structure.sh  deploy_futurnod.sh  docker-compose.yml  e2e_test.py  main.py  pyproject.toml  run_tests.sh  setup_local.sh
Agents/src/Researcher/: agent.py
api/: auth.py  cache.py  config.py  routes.py  security.py  utils.py
app/: api.py  cache_manager.py  security_utils.py
certs/: server.crt  server.key
core/: researcher.py  storage.py
models/: request.py  response.py
scripts/: setup.py
tests/: conftest.py  test_api.py  test_cache.py  test_core.py  test_security.py
